helm/ingress/jenkins-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: jenkins-ingress
  namespace: default
  annotations:
    external-dns/public: "true"
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: cluster-issuer-lets-encrypt
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: route53
spec:
  tls:
    - secretName: jenkins.test.fkaj.com
      hosts:
        - jenkins.test.fkaj.com
  rules:
    - host: jenkins.test.fkaj.com
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins-jenkins
              servicePort: 80
